--- a/WebProjects/Game.Web/Game.Web.csproj
+++ b/WebProjects/Game.Web/Game.Web.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
+    <Content Include="home.html" />
     <Content Include="images\an_2.png" />
     <Content Include="images\arrBig.gif" />
     <Content Include="images\arrBig1.gif" />
@@ -2641,7 +2642,7 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="WebServiceLogin.asmx" />
+    <Content Include="api.asmx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Index.aspx.cs">
@@ -3990,8 +3991,8 @@
     <Compile Include="UI\AdminPage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebServiceLogin.asmx.cs">
-      <DependentUpon>WebServiceLogin.asmx</DependentUpon>
+    <Compile Include="api.asmx.cs">
+      <DependentUpon>api.asmx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -4012,7 +4013,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\Game.Socket\Game.Socket.csproj">
+    <ProjectReference Include="..\..\Common\Game.Socket\Game.Socket.csproj">
       <Project>{dd0f35e9-a8ea-436e-bdac-9b01503d43fe}</Project>
       <Name>Game.Socket</Name>
     </ProjectReference>
